Updated Readme Page with images

--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,33 @@
-= XYZ Reader Starter Code
+XYZ Reader Starter Code
 
-This repository stores the starter code for the XYZ Reader project in Udacity's Android Nanodegree.
+This project involved in updating the look and the feel of the app. The changes included the addition of co-ordinator layout, fab bbuttons, recyclerview and other required changes. 
+
+The best way to understand the changes would be to see the before and after look of the app:
+
+Before the Changes:
+-------------------- 
+Landing Page:
+
+[![Before-Landing-Page.jpg](https://i.postimg.cc/R0qppYZQ/Before-Landing-Page.jpg)](https://postimg.cc/GBwjHqYH)
+
+Details Page:
+
+[![Before-second-Page.jpg](https://i.postimg.cc/HLKZqtJG/Before-second-Page.jpg)](https://postimg.cc/3yXFpmC9)
+
+
+After the Changes:
+-------------------- 
+Landing Page:
+
+[![After-Landing-Page.jpg](https://i.postimg.cc/1RDCdwsT/After-Landing-Page.jpg)](https://postimg.cc/QVxJ9BBk)
+
+Details Page Without Scrolling:
+
+[![After-Second-Page-without-scrolling.jpg](https://i.postimg.cc/bN8Cfrvv/After-Second-Page-without-scrolling.jpg)](https://postimg.cc/hhyb9STF)
+
+Details Page With Scrolling:
+
+[![After-Second-Page-with-scrolling.jpg](https://i.postimg.cc/Hs2SYmJ9/After-Second-Page-with-scrolling.jpg)](https://postimg.cc/Mvn05hmn)
+
+
+
